<resources>
    <string name="app_name">Message Scheduler</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="status_upcoming">Upcoming</string>
    <string name="status_sent">Sent</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_history">History</string>
    <string name="type_sms">SMS</string>
    <string name="type_whats_app">WhatsApp</string>
    <string name="msg_sent">Message sent successfully!</string>
    <string name="msg_delivered">Message delivered successfully!</string>
    <string name="msg_generic_failure">Generic failure!</string>
    <string name="msg_no_service">No Service!</string>
    <string name="msg_null_pdu">Null PDU!</string>
    <string name="msg_radio_off">Radio off!</string>
    <string name="msg_not_delivered">Message not delivered!</string>
    <string name="msg_no_whats_app_installed">WhatsApp is not installed on your device!</string>
    <string name="selectReceiver">Select Receiver</string>
    <string name="searchName">Search by name…</string>
    <string name="searchGroup">Group name…</string>
    <string name="txtViewGroupName">Group Name</string>
    <string name="txtViewNoItem">No Item Here!</string>
    <string name="deletePerson">R U Sure To Delete This Person?</string>
    <string name="personDeleted">Person Deleted Successfully</string>
    <string name="btnDone">Done</string>
    <string name="emptyGroup">Can\'t create Empty group!</string>
    <string name="groupCreated">Group contacts created successfully!</string>
    <string name="btnCreate">Create</string>
    <string name="createGroup">Create Group</string>
    <string name="groupName">Group Name Required!</string>
    <string name="readContactsPermission">Give us the permission to read your contacts!</string>
    <string name="txtViewName">Name</string>
    <string name="editTxtReceiverNumber">Receiver Number</string>
    <string name="editTxtMessage">Message</string>
    <string name="editTxtDate">Date</string>
    <string name="editTxtTime">Time</string>
    <string name="btnSMS">SMS</string>
    <string name="btnWhatsApp">WhatsApp</string>
    <string name="editScheduledMessages">Edit Scheduled Messages</string>
    <string name="enterValidDate">Please, Enter a valid Date!</string>
    <string name="enterValidTime">Please, Enter a valid Time!</string>
    <string name="enableAccessibility">Enable Accessibility</string>
    <string name="downloadNewerVersion">Download VIP Version</string>
    <string name="downloadNewerVersionMessage">You can download a new version to enable you to send SMS messages!</string>
    <string name="accessibilitySteps">When clicking on WhatsApp Button …\n○ More downloaded services\n○ Message Scheduler\n○ enable Accessibility</string>
    <string name="accessibilityDescription">The accessibility service is used to schedule WhatsApp messages only, especially to automatically send content to selected recipients at the specified time and date. Message Scheduler is allowed to perform the following tasks using the accessibility service:\n\n1) Copy the contact’s name when scheduling the message\n2) Open WhatsApp\n3) Paste the contact’s name into the search box\n4) Choose the target contact from the search results\n5) Open the chat window with the specified contact\n6) Paste the content of the message\n7) Click the Send button to send the message\n\nWithout access, automatic transmission will not be possible.</string>
    <string name="receiverNumber">Receiver Phone Number Required!</string>
    <string name="validPhone">Enter a valid phone number!\nDigits only or choose from your contacts!</string>
    <string name="messageRequired">Message mustn\'t be empty!</string>
    <string name="messageSchedule">Message scheduled successfully!</string>
    <string name="sendMessagePermission">Give us the permission to send your messages!</string>
    <string name="editTxtEmail">Email</string>
    <string name="btnSend">Send</string>
    <string name="emailSentSuccessfully">Email sent to you Successfully!\nPlease, check your email inbox.</string>
    <string name="emailSent">Email sent</string>
    <string name="passwordReset">Password Reset</string>
    <string name="txtViewAdvancedOption">Advanced Options</string>
    <string name="selectContact">You must select contact from the image on top of this screen not typing his info!</string>
    <string name="allContacts">You will see all contacts now if you press on the image above</string>
    <string name="whatsAppContacts">You will see only contacts that have WhatsApp now if you press on the image above!</string>
    <string name="validPhoneNumber">Enter a valid phone number!\nLIKE: 0106 320 8399\nLIKE: +201063208399\nor choose from your contacts by pressing on image on top of this screen!</string>
    <string name="permissionRequired">Your permission is required!</string>
    <string name="readContactsExplanation"><b>Read contacts</b>\nTo select recipients from your contact list</string>
    <string name="sendSMSExplanation"><b>Send SMS</b>\nIn order to send your scheduled messages</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="missYou">We missed you so much 🤗</string>
    <string name="warningMsgWhatsApp"><b>Warning: choose a time</b>\nPlease do not schedule two or more WhatsApp messages at the same time to avoid transmission failure\n\n<b>Mandatory requirement: unlock screen</b>\nPlease cancel the screen lock until the process of sending WhatsApp messages succeeds, as when the screen is off, we regret not sending the message correctly, and this is an external condition outside our control. We offer this unconventional solution after extensive research and development, as a solution that uses the possibility of Android access to activate the possibility of automating WhatsApp. Without it, the service in sending WhatsApp messages will be unhelpful, and the sending process will fail at that time. We promise to provide you with the right solution when technically available. Thank you for your understanding\n\n<b>Mandatory Requirement: Optimization of battery use improvement</b>\nOn some Android devices, improved battery usage cancels the accessibility service automatically after an idle period, causing the failure to send scheduled WhatsApp messages. To prevent this from happening, please uninstall Battery Scheduler Optimization from your device\'s settings.</string>
    <string name="optimizeBattery"><b>Battery optimization adjustment</b></string>
    <string name="batteryOptimizationSettings">Battery optimization settings</string>
    <string name="turnOffBatteryOptimization">Please, turn off battery optimization for Message Scheduler to do its job without errors\nAfter pressing the OK button, we will direct you to the battery optimization screen, then take the following steps…\n○ You will find a selection on not optimized, open the menu and then choose all apps\n○ Find and tap Message Scheduler\n○ Choose Don\'t optimize then press Done\n○ Return to the Message Scheduler app and schedule your messages\n\nNote that we do not drain the battery but we use it for optimal use, but this procedure is required so that we can schedule your messages and send them at the specified time without transmission failing to close the Android system for the application after a period of inactivity</string>
    <string name="perfectMsg">Message Scheduler will run perfectly!\nGreat Work!</string>
    <string name="cannotSendSMS">You Can\'t send SMS messages with this version!\nPlease download the newer version!</string>
    <string name="scheduleNetworkMessages">Schedule Network Messages</string>
    <string name="editTxtPassword">Password</string>
    <string name="txtViewForgetPassword">Forgot Password?</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtViewSignInWith">Sign In With</string>
    <string name="txtViewDoNotHaveAccount">Do Not Have Account?</string>
    <string name="verifyEmail">Please, verify your email address to login.</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="emailRequired">Email Required!\nPlease, Type your Email!</string>
    <string name="passwordRequired">Password Required!\nPlease, Type your Password!</string>
    <string name="internetConnection">Your Data transfer and Wifi connection closed!\nOpen Internet Connection and try again!</string>
    <string name="editTxtRePassword">Confirm Password</string>
    <string name="btnSignUp">Register</string>
    <string name="txtViewAlreadyRegistered">Already Registered?</string>
    <string name="registerSuccessfully">Registered Successfully\nPlease, check your email for verification.</string>
    <string name="verifyAccount">Verify Account</string>
    <string name="authenticationFailed">Authentication Failed!\nThis Email already registered before!</string>
    <string name="commentError">Please, comment with error on play store to fix this error!</string>
    <string name="register">Create new account</string>
    <string name="validEmail">Valid Email Required!\nlike: example@example.com</string>
    <string name="passwordLength">Password should be at least 6 characters long!</string>
    <string name="confirmPassword">Confirm Password Required!\nPlease, Confirm your Password!</string>
    <string name="passwordIncompatible">Two passwords incompatible!</string>
    <string name="checkBoxRegisterPolicy">By registering, you agree to the</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="ofMessageScheduler">of Message Scheduler</string>
    <string name="warning">Warning</string>
    <string name="warningMsg">You must agree to the Privacy Policy and Terms &amp; Conditions of Use of Message Scheduler before proceeding</string>
    <string name="txtViewSplashActivity">Message Scheduler</string>
    <string name="developerName">Ahmed Ali</string>
    <string name="developerNumber">+20 106 320 8399</string>
    <string name="txtViewDateFormat">12/11/2019</string>
    <string name="txtViewDash">-</string>
    <string name="txtViewTimeFormat">02:36</string>
    <string name="txtViewMessage">any message could be here</string>
    <string name="itemGroups">Groups</string>
    <string name="itemMenuHome">Menu Home</string>
    <string name="itemConversations">Conversations</string>
    <string name="itemTips">Tips</string>
    <string name="itemHelp">Help</string>
    <string name="itemEmailUs">Email Us</string>
    <string name="itemCallUs">Call Us</string>
    <string name="itemRateUs">Rate Us</string>
    <string name="itemProfile">Profile</string>
    <string name="itemSIM">Configure Networks</string>
    <string name="itemSettings">Settings</string>
    <string name="itemPrivacyPolicy">Privacy Policy</string>
    <string name="itemTermsAndConditions">Terms &amp; Conditions</string>
    <string name="itemLogout">Logout</string>
    <string name="itemEdit">Edit</string>
    <string name="itemDelete">Delete</string>
    <string name="itemSearch">Search</string>
    <string name="SIMName">Network(SIM) Name</string>
    <string name="ExampleNetwork">LIKE: Vodafone</string>
    <string name="Prefix">Prefix</string>
    <string name="ExamplePrefix">Ex: +2010</string>
    <string name="simAdded">SIM Added Successfully!</string>
    <string name="configureNetworks">Configure Networks</string>
    <string name="simName">Network(SIM) Name required!</string>
    <string name="prefixRequired">Prefix of Network(SIM) required!</string>
    <string name="prefixRestriction">Prefix of Network(SIM) should starts with sign (+)!</string>
    <string name="adViewId" translatable="false">ca-app-pub-4171202920109669/1327676037</string>
</resources>