<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ScheduleGroupMessageActivity">

    <include
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgViewGroup"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_group_blue"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtViewGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txtViewName"
                android:textAlignment="viewStart"
                android:textColor="@color/appColor"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/imgViewGroup"
                app:layout_constraintStart_toStartOf="@+id/imgViewGroup"
                app:layout_constraintTop_toBottomOf="@+id/imgViewGroup" />

            <EditText
                android:id="@+id/editTxtMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_message_baby_blue_24dp"
                android:drawablePadding="32dp"
                android:drawableTint="@color/appColor"
                android:ems="10"
                android:hint="@string/editTxtMessage"
                android:inputType="textMultiLine"
                android:paddingStart="16dp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewGroupName"
                tools:ignore="Autofill,RtlSymmetry,UnusedAttribute" />

            <EditText
                android:id="@+id/editTxtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_date_range_baby_blue_24dp"
                android:drawablePadding="32dp"
                android:drawableTint="@color/appColor"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/editTxtDate"
                android:inputType="date"
                android:paddingStart="16dp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="@+id/editTxtMessage"
                app:layout_constraintStart_toStartOf="@+id/editTxtMessage"
                app:layout_constraintTop_toBottomOf="@+id/editTxtMessage"
                tools:ignore="Autofill,RtlSymmetry,UnusedAttribute" />

            <EditText
                android:id="@+id/editTxtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_access_time_baby_blue_24dp"
                android:drawablePadding="32dp"
                android:drawableTint="@color/appColor"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/editTxtTime"
                android:inputType="time"
                android:paddingStart="16dp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="@+id/editTxtDate"
                app:layout_constraintStart_toStartOf="@+id/editTxtDate"
                app:layout_constraintTop_toBottomOf="@+id/editTxtDate"
                tools:ignore="Autofill,RtlSymmetry,UnusedAttribute" />

            <Button
                android:id="@+id/btnSMS"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_style"
                android:text="@string/btnSMS"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editTxtTime"
                app:layout_constraintTop_toBottomOf="@+id/editTxtTime" />

            <Button
                android:id="@+id/btnWhatsApp"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_style"
                android:text="@string/btnWhatsApp"
                android:textColor="#fff"
                app:layout_constraintBottom_toBottomOf="@+id/btnSMS"
                app:layout_constraintEnd_toEndOf="@+id/editTxtTime"
                app:layout_constraintTop_toTopOf="@+id/btnSMS" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/adViewId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>